--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+JWT_SECRET=
+JWT_BLACKLIST_ENABLED=true
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=http://localhost:8000/api/auth/github/callback
