--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/socialite": "^5.20",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.9",
-        "tymon/jwt-auth": "*"
+        "spatie/laravel-permission": "^6.20",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
